--- a/custom.css
+++ b/custom.css
@@ -542,6 +542,32 @@ footer{background-color:#03B5B5; white-space: nowrap;}
 	padding: 0 50px;
 }
 
+.simlist h4{
+    font-size: 22px;
+    font-weight: 700;
+}
+
+.user_profile .namerating h3{
+    margin-top: 10px;
+}
+
+.simlist hr{
+    width: 90%;
+    margin-top: 5vw;
+    background-color: #939393;
+    border: 0 none;
+    color: #939393;
+    height: 1px;
+}
+
+.simlist .LPReviews{
+    margin-top: 20px;
+}
+
+.simlist .LPReviews h3{
+    font-size: 18px;
+}
+
 .simlist .container{
 	margin-left: 0;
 }
