--- a/custom.css
+++ b/custom.css
@@ -830,9 +830,103 @@ h4, h5 {
 }
 
 /* ----------------- Modal ------------------ */
+.modal-login-header {
+    background-color: #fff;    
+}
+
+.login-modal-title {
+    color: #000;
+}
+
 .modal-header {
     background-color: #03B5B5;
     color: #fff;
+}
+
+#fb-login-btn {
+    color: #fff;
+    width: 100%;
+    background: #3B5998;
+    margin-bottom: 5px;
+}
+
+.fa-facebook {
+    float: left;
+    margin: 10px 10px;
+}
+
+#fb-login-text {
+    align-content: center;
+    margin: 10px 10px 10px 10px;
+}
+
+#g-login-btn {
+    color: #000;
+    width: 100%;
+    background: #fff;
+    margin-bottom: 5px;
+}
+
+#g-icon {
+    height: 30px;
+    float: left;
+    margin: 10px 10px;
+}
+
+#option-text {
+    color: black;
+    margin: 5px;
+}
+
+#g-login-text {
+    align-content: center;
+    margin: 10px 10px 10px 10px;
+}
+
+#login-email,
+#login-pw {
+    width: 99%;
+    margin: 5px;
+    padding: 15px;
+    float: left;
+    font-size: 20px
+}
+
+#login-remember-me {
+    float: left;
+    margin: 10px;
+    color: grey;
+    font-size: 20px;
+}
+
+#login-pw-forgot {
+    color: red;
+    float: right;
+    margin: 10px
+}
+
+#login-btn {
+    background: #03B5B5;
+    color: #fff;
+    width: 100%;
+    padding: 15px;
+    font-size: 20px;
+}
+
+#sign-up-text {
+    color: grey;
+    padding-right: 5px;
+}
+#sign-up-btn {
+    background: #fff;
+    color: #03B5B5;
+    border-radius: 25px;
+    padding: 5px 30px;
+    margin: 20px 0px 0px 80px;
+}
+
+.login-hr {
+    margin: 5px;
 }
 
 .close {
