--- a/custom.css
+++ b/custom.css
@@ -932,3 +932,47 @@ h4, h5 {
 .close {
     color: #fff;
 }
+
+.contact_container input[type=text], input[type=email], textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+.contact_container input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.contact_container input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.contact_container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    width: 80%;
+}
+
+.contact_info{
+    margin: 5% 5% 0 5%;
+}
+
+.addressphone{
+    margin-top: 40px;
+}
+
+.contact_info h5{
+    font-size: 18px;
+    font-weight: bold;
+}
